@@ -2,6 +2,9 @@ Revision history for Perl extension Finance-Bank-Bankwest
 
 {{$NEXT}}
 
+  - Add an "equals" method and overloaded "eq" and "ne" operators to
+    Transaction objects to test for equivalence.
+
 1.0.1   2013-04-26
 
   - Minor documentation adjustments.
